// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs component renders 1`] = `
@media  {
  .c-fixGjY {
    display: flex;
    flex-direction: column;
  }

  .c-MQgzr {
    flex-shrink: 0;
    display: flex;
    border-bottom: 1px solid var(--colors-primaryDark);
  }

  .c-hUDFHn {
    color: var(--colors-secondary);
    cursor: pointer;
    flex-shrink: 0;
    font-family: var(--fonts-body);
    padding: var(--space-4);
    -webkit-user-select: none;
    user-select: none;
  }

  .c-hUDFHn:hover {
    color: var(--colors-primary);
  }

  .c-hUDFHn[data-disabled],
  .c-hUDFHn[data-disabled]:hover {
    color: var(--colors-tonal300);
    cursor: default;
  }

  .c-hUDFHn[data-state="active"] {
    color: var(--colors-primary);
    font-weight: bold;
    box-shadow: inset 0 -3px 0 0 currentColor;
  }

  .c-eGaVeY {
    flex-grow: 1;
  }
}

<div>
  <div
    class="c-fixGjY"
    data-orientation="horizontal"
  >
    <div
      aria-orientation="horizontal"
      class="c-MQgzr"
      data-orientation="horizontal"
      dir="ltr"
      role="tablist"
      style="outline: none;"
      tabindex="0"
    >
      <div
        aria-controls="radix-id-0-1-content-tab1"
        aria-selected="true"
        class="c-hUDFHn"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="active"
        id="radix-id-0-1-trigger-tab1"
        role="tab"
        tabindex="-1"
      >
        Trigger 1
      </div>
      <div
        aria-controls="radix-id-0-1-content-tab2"
        aria-selected="false"
        class="c-hUDFHn"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="inactive"
        id="radix-id-0-1-trigger-tab2"
        role="tab"
        tabindex="-1"
      >
        Trigger 2
      </div>
    </div>
    <div
      aria-labelledby="radix-id-0-1-trigger-tab1"
      class="c-eGaVeY"
      data-orientation="horizontal"
      data-state="active"
      id="radix-id-0-1-content-tab1"
      role="tabpanel"
      tabindex="0"
    >
      Important content for tab 1
    </div>
    <div
      aria-labelledby="radix-id-0-1-trigger-tab2"
      class="c-eGaVeY"
      data-orientation="horizontal"
      data-state="inactive"
      hidden=""
      id="radix-id-0-1-content-tab2"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Tabs component renders mobile view 1`] = `
@media  {
  .c-fixGjY {
    display: flex;
    flex-direction: column;
  }

  .c-MQgzr {
    flex-shrink: 0;
    display: flex;
    border-bottom: 1px solid var(--colors-primaryDark);
  }

  .c-hUDFHn {
    color: var(--colors-secondary);
    cursor: pointer;
    flex-shrink: 0;
    font-family: var(--fonts-body);
    padding: var(--space-4);
    -webkit-user-select: none;
    user-select: none;
  }

  .c-hUDFHn:hover {
    color: var(--colors-primary);
  }

  .c-hUDFHn[data-disabled],
  .c-hUDFHn[data-disabled]:hover {
    color: var(--colors-tonal300);
    cursor: default;
  }

  .c-hUDFHn[data-state="active"] {
    color: var(--colors-primary);
    font-weight: bold;
    box-shadow: inset 0 -3px 0 0 currentColor;
  }

  .c-eGaVeY {
    flex-grow: 1;
  }

  .c-dhzjXW {
    display: flex;
  }
}

@media  {
  .c-dhzjXW-icmpvrW-css {
    position: relative;
  }

  .c-MQgzr-ifwuxZe-css {
    width: 100%;
    overflow-x: auto;
  }

  .c-MQgzr-ifwuxZe-css::-webkit-scrollbar {
    display: none;
  }
}

<div>
  <div
    class="c-fixGjY"
    data-orientation="horizontal"
  >
    <div
      class="c-dhzjXW c-dhzjXW-icmpvrW-css"
    >
      <div
        aria-orientation="horizontal"
        class="c-MQgzr c-MQgzr-ifwuxZe-css"
        data-orientation="horizontal"
        dir="ltr"
        role="tablist"
        style="outline: none;"
        tabindex="0"
      >
        <div
          aria-controls="radix-id-0-1-content-tab1"
          aria-selected="true"
          class="c-hUDFHn"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="active"
          id="radix-id-0-1-trigger-tab1"
          role="tab"
          tabindex="-1"
        >
          Trigger 1 which is going to be long
        </div>
        <div
          aria-controls="radix-id-0-1-content-tab2"
          aria-selected="false"
          class="c-hUDFHn"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-id-0-1-trigger-tab2"
          role="tab"
          tabindex="-1"
        >
          Trigger 2 which is going to be even longer
        </div>
      </div>
    </div>
    <div
      aria-labelledby="radix-id-0-1-trigger-tab1"
      class="c-eGaVeY"
      data-orientation="horizontal"
      data-state="active"
      id="radix-id-0-1-content-tab1"
      role="tabpanel"
      tabindex="0"
    >
      Important content for tab 1
    </div>
    <div
      aria-labelledby="radix-id-0-1-trigger-tab2"
      class="c-eGaVeY"
      data-orientation="horizontal"
      data-state="inactive"
      hidden=""
      id="radix-id-0-1-content-tab2"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;
